- Fix search bar drop-down on Linux - Increase padding slightly next to non-menu toolbar buttons - Tweak alignment of sync icon

--- a/chrome/content/zotero-platform/mac/overlay.css
+++ b/chrome/content/zotero-platform/mac/overlay.css
@@ -43,7 +43,10 @@
   padding: 5px 1px 5px 11px;
 }
 
-#zotero-tb-search-menu-button {
+#zotero-tb-search-menu-button
+{
+	margin: -6px -2px -6px -16px;
+	padding: 6px 2px 6px 14px;
 	list-style-image: url("chrome://browser/skin/searchbar-dropmarker.png");
 }
 
